--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs/PathSyntax/v15
+/PathSyntax/obj
+/PathSyntax/bin/Debug/netstandard2.0
+/PathSyntax.Tests/bin/Debug/netcoreapp2.2
+/PathSyntax.Tests/obj/Debug/netcoreapp2.2
+/PathSyntax.Tests/obj
